# ot-haptic-feedback-digital-twin

./: DEPLOY_TO_GITHUB.md  LICENSE  README.md  THIRD_PARTY_NOTICE.md
code/haptic/: README.md
code/haptic/geomagic_touch_ws/src/geomagic_control/: CMakeLists.txt  package.xml
code/haptic/geomagic_touch_ws/src/geomagic_control/launch/: dual_device_demo.launch  geomagic_headless.launch  left_device.launch  right_device.launch
code/haptic/geomagic_touch_ws/src/geomagic_control/scripts/: force_pub.py
code/vision/: Pose&Depth.ipynb  Pose_and_Depth_TEMPLATE.ipynb  README.md
tutorials/: 01_prerequisites.md  02_build_and_run_haptic_interface.md  03_connect_to_simulator_or_isaacsim.md  04_pose_and_depth_estimation.md  04_repository_customisation.md
