<?xml version="1.0"?>
<package format="2">
  <name>geomagic_control</name>
  <version>0.1.0</version>
  <description>Geomagic Touch ROS interface and haptic force publisher used in the OT digital twin framework.</description>

  <maintainer email="j.tan23@imperial.ac.uk">Zongcai Tan</maintainer>
  <license>BSD-3-Clause and other notices, see source headers and THIRD_PARTY_NOTICE.md</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>openhaptics-ae</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geomagic_description</exec_depend>

  <export/>
</package>
